# lte-gateway-ble

./: CMakeLists.txt  Kconfig  README.md  README.rst  apricity_gateway_nrf52840.overlay  mcuboot.conf  nrf52840_pca20035.overlay  prj.conf  sample.yaml  west.yml
boards/arm/apricity_gateway_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  apricity_gateway_nrf52840.dts  apricity_gateway_nrf52840.yaml  apricity_gateway_nrf52840_defconfig  board.c  board.cmake  thingy91_nrf52840.dts  thingy91_nrf52840_defconfig
src/: alt_dfu_stream.c  alt_dfu_stream.h  main.c  tk_mqtt_dfu.c  tk_mqtt_dfu.h  tk_shutdown.c  tk_shutdown.h  usb_uart_bridge.c  usb_uart_bridge.h
